@@ -20,6 +20,11 @@ from 2.7.17 to 2.7.18
   the help of an external catalog (the few first data and EA were reported
   as corrupted in sequential read mode, not in direct read mode or without
   the help of an external catalog).
+- fixing bug in non-regression test routines, which one fixed revealed the
+  following bugs
+- reading a encrypted and sliced archive in sequential-read mode lead dar
+  asking for the an after-last non existing slice at the end of the
+  operation.
 
 from 2.7.16 to 2.7.17
 - fixed bug where -R path ending with // was breaking the path filtering
